fixed scrollbar size style

--- a/src/options/components/Exclusions/AddExclusion/ServiceMode/service-mode.pcss
+++ b/src/options/components/Exclusions/AddExclusion/ServiceMode/service-mode.pcss
@@ -9,6 +9,7 @@
     &__content {
         flex: 1 1 auto;
         overflow-y: auto;
+        scrollbar-width: thin;
     }
 
     &-list {
