--- a/src/options/components/ui/Modal/modal.pcss
+++ b/src/options/components/ui/Modal/modal.pcss
@@ -88,5 +88,6 @@
 
     &__wrapper {
         overflow-y: auto;
+        scrollbar-width: thin;
     }
 }
